# ganit

./: CMakeLists.txt  README.md
include/ganit/: basic_operations.hpp
src/: basic_operations.cpp
test/: test_basic_operations.cpp
